# TableCodeAgent

./: .gitignore  CLAUDE.md  README.md  _coverpage.md  _sidebar.md  requirements-dev.txt
.claude/rules/: workflow-boundaries.md
.codex/: AGENTS.md
configs/api/: README.md  deepseek.env.example  openai_compatible.env.example
docs/: code-review-v0.0.3-20260607.md
docs/baseline/: 00-introduction.md  10-plan-mode.md  13-whats-next.md
docs/reproduce/: 2026-06-03_python_baseline_install.md  2026-06-03_why_table_code_agent.md  (+20 more)
python/: pyproject.toml
scripts/: run_agent_table_tools_smoke.sh  run_benchmark_smoke.sh  run_deepseek_smoke.sh  run_demo_table_agent_smoke.sh  run_openai_compatible_smoke.sh  run_real_api_code_agent_benchmark.sh  run_table_tools_smoke.sh  setup_linux.sh  setup_windows.ps1
src/: README.md  pyproject.toml
src/claude_code_from_scratch.egg-info/: SOURCES.txt
src/mini_claude/: agent.py  prompt.py  skills.py  tools.py
src/tablecodeagent/: agent_tools.py
src/tablecodeagent/benchmark/: __init__.py  answer_models.py  benchmark_runner.py  real_api_code_agent.py  runner.py
src/tablecodeagent/context/: table_context.py
src/tablecodeagent/memory/: analysis.py
src/tablecodeagent/runtime/: dependency.py  sandbox.py
src/tablecodeagent/table_tools/: core.py  quality.py
src/tablecodeagent/tracing/: logger.py
src/tablecodeagent/validation/: answer.py
src/tablecodeagent/workflow/: __init__.py  loop.py  state.py
src/tablecodeagent/workflows/: credit_risk_scoring.py  finance_operations.py  growth_campaign_audit.py
tests/: __init__.py
(+343 files in other folders)
