[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tablecodeagent"
version = "0.0.5"
description = "A lightweight coding agent for complex table and business data tasks with tool use, executable code generation, answer validation, trace logging, and benchmark evaluation."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "openai>=1.50.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
mini-claude-py = "mini_claude.__main__:main"

[tool.setuptools.packages.find]
include = ["mini_claude*", "tablecodeagent*"]

[tool.setuptools.package-data]
mini_claude = ["system_prompt.md"]
